Added Quote Section

--- a/index.html
+++ b/index.html
@@ -336,5 +336,16 @@
       </div>
     </div>
     <!-- End Skills -->
+    <!--Start Qoute Section -->
+    <div class="quote">
+      <div class="container">
+        <q
+          >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate
+          voluptatum maiores architecto velit eius molestias.</q
+        >
+        <span>John Doe</span>
+      </div>
+    </div>
+    <!--End Qoute Section -->
   </body>
 </html>
