added Subscribe Section

--- a/index.html
+++ b/index.html
@@ -420,9 +420,26 @@
           </div>
         </div>
         <p class="contact-text">Contact us if you have special request</p>
-        <a href="mailto:mohamed.elzahaby2004@gmail.com" class="contact-link">Contact Us </a>
+        <a href="mailto:mohamed.elzahaby2004@gmail.com" class="contact-link"
+          >Contact Us
+        </a>
       </div>
     </div>
     <!-- End Pricing -->
+    <!-- Start Sub -->
+    <div class="sub">
+      <div class="container">
+        <form action="">
+          <i class="far fa-envelope fa-lg"></i>
+          <input type="email" name="mail" placeholder="Your Email" />
+          <input type="submit" value="Subscribe" />
+        </form>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum
+          expedita distinctio mollitia.
+        </p>
+      </div>
+    </div>
+    <!-- End Sub -->
   </body>
 </html>
