--- a/index.html
+++ b/index.html
@@ -441,5 +441,65 @@
       </div>
     </div>
     <!-- End Sub -->
+    <!-- Start Contact Us -->
+    <div class="contact-us">
+      <div class="container">
+        <div class="main-heading">
+          <h2>Contact Us</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla
+            ipsam, hic harum ducimus illo
+          </p>
+        </div>
+        <div class="content">
+          <form action="">
+            <input
+              class="main-input"
+              type="text"
+              name="name"
+              placeholder="Your Name"
+            />
+            <input
+              class="main-input"
+              type="email"
+              name="mail"
+              placeholder="Your Email"
+            />
+            <textarea
+              class="main-input"
+              name="message"
+              placeholder="Your Message"
+            ></textarea>
+            <input type="submit" value="Send Message" />
+          </form>
+          <div class="info">
+            <h4>Get In Touch</h4>
+            <span class="phone">+00 123.456.789</span>
+            <span class="phone">+00 123.456.789</span>
+            <h4>Where We are</h4>
+            <address>
+              Awesome Address 17 <br />
+              New York, NYC <br />123-4567-890 <br />USA
+            </address>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Contact Us -->
+    <!-- Start Footer -->
+    <div class="footer">
+      <div class="container">
+        <img src="images/logo.png" alt="Logo" />
+        <p>We Are Social</p>
+        <div class="social-icons">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fas fa-home"></i>
+          <i class="fab fa-linkedin"></i>
+        </div>
+        <p class="copyright">&copy; 2024 <span>Kasper</span> All Rights Reserved</p>
+      </div>
+    </div>
+    <!-- End Footer -->
   </body>
 </html>
